--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -15,11 +15,16 @@ jobs:
         with:
           python-version: '3.x'  # Replace 'x' with the desired Python version
 
+      - name: Install DVC
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install dvc
+
       - name: Install and set up virtual environment
         run: |
           python -m venv venv
           source venv/bin/activate
-          python -m pip install --upgrade pip
+          pip install --upgrade pip
           pip install dvc dvc[gdrive]
 
       - name: Pull data from DVC
