--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -15,17 +15,10 @@ jobs:
         with:
           python-version: '3.x'  # Replace 'x' with the desired Python version
 
-      - name: Install DVC
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install dvc
-
-      - name: Install and set up virtual environment
-        run: |
-          python -m venv venv
-          source venv/bin/activate
-          pip install --upgrade pip
-          pip install dvc dvc[gdrive]
+          python -m pip install -r requirements.txt
 
       - name: Pull data from DVC
         run: |
