--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -22,6 +22,8 @@ jobs:
       - name: Pull data from DVC
         run: |
           dvc remote list
+          dvc remote modify myremote gdrive_service_account_user_email \
+              ihebkesraoui@gmail.com
           dvc remote modify myremote gdrive_client_id ${{ secrets.DAGSHUB_USERNAME }}
           dvc remote modify myremote gdrive_client_secret ${{ secrets.DAGSHUB_TOKEN }}
           dvc pull
