--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -1,25 +1,22 @@
-name: Run code
-
-on: [push, pull_request]
+name: CML & DVC
+on: [push]
 jobs:
-  run_code:
-    name: Run code
+  train-and-report:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out the current repository
-        uses: actions/checkout@v2
-        
-      - name: Set up Python environment
-        uses: actions/setup-python@v2
+      - uses: actions/checkout@v3
         with:
-          python-version: '3.x'  
-      - name: Install dependencies
+          ref: ${{ github.event.pull_request.head.sha }}
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+      - uses: iterative/setup-cml@v1
+      - uses: iterative/setup-dvc@v1
+      - name: Train model
+        env:
+         GDRIVE_CREDENTIALS_DATA: ${{ secrets.GDRIVE_CREDENTIALS_DATA }}
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install -r requirements.txt
-
-      - name: Pull data from DVC
-        run: |
+          dvc pull data
           dvc remote modify --local myremote \
           gdrive_service_account_json_file_path \
           /home/nanoz-admin/runner/.cache/pydrive2fs/${{ secrets.DAGSHUB_USERNAME }}/default.json
