--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -1,18 +1,23 @@
-name: Run code
+name: train-my-model
 
-on: [push, pull_request]
+on: [push]
+
 jobs:
-  run_code:
-    name: Run code
-    runs-on: ubuntu-latest
+  run:
+    runs-on: [ubuntu-latest]
+
     steps:
-      - name: Check out the current repository
-        uses: actions/checkout@v2
-        
-      - name: Set up Python environment
-        uses: actions/setup-python@v2
+      - uses: actions/checkout@v3
         with:
-          python-version: '3.x'  
+          ref: ${{ github.event.pull_request.head.sha }}
+
+      - uses: iterative/setup-cml@v1
+
+      - uses: iterative/setup-dvc@v1
+
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
