--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -24,7 +24,13 @@ jobs:
           python -m pip install -r requirements.txt
 
       - name: Pull data from DVC
+      
+        env:
+         GDRIVE_CREDENTIALS_DATA: ${{ secrets.GDRIVE_CREDENTIALS_DATA }}
         run: |
+          echo "$GDRIVE_CREDENTIALS_DATA" > gdrive_creds.json
+          dvc remote modify myremote gdrive_use_service_account true
+          dvc remote modify myremote --local gdrive_service_account_json_file_path gdrive_creds.json          
           dvc remote modify --local myremote profile myprofile
           dvc remote modify --local myremote \
           gdrive_service_account_json_file_path /home/nanoz-admin/runner/.cache/pydrive2fs/656516348507-bk3boqe3v6qch9gjhcgns5cl2e3tb6dh.apps.googleusercontent.com/default.json
