--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -30,7 +30,7 @@ jobs:
         run: |
           echo "$GDRIVE_CREDENTIALS_DATA" > gdrive_creds.json
           
-          dvc remote modify myremote gdrive_use_service_account false
+          dvc remote modify myremote gdrive_use_service_account true
           dvc remote modify myremote --local gdrive_service_account_json_file_path gdrive_creds.json          
           dvc remote modify --local myremote profile myprofile
           dvc remote modify myremote gdrive_trash_only true
